# VKR_publ_Amurrio

./: .gitignore  CMakeLists.txt  README.md  run.sh
RealDataCostructor/FAR/: FAR_graph_maker.py  data.xml  data_adapter.py  easy.sh  input.xml
RealDataCostructor/KBO/: KBO_graph_maker.py  data.xml  data_adapter.py  easy.sh  input.xml
RealDataCostructor/Tree/: generator.py  input.xml
data/: NewXML.xml  example2a.xml  example2a2.xml  example2b.xml  example4_amurrio.xml  example5.xml  example5_2.xml  example5_3.xml  example5_float.xml  example5mod.xml  example6.xml  example7.xml  input.xml  input2.xml  input3.xml  simpleExample.xml  tgff5.xml  tgff5_int.xml
dataBF/: example2a.xml  example2b.xml  example5.xml  example7.xml  exampleBF.xml  input1.xml  inputF0.xml  inputF2.xml  inputF3.xml
dataFAR/: inputBFAR1-46.xml  inputBFAR2-80.xml  inputBFAR3-139.xml  inputBFAR4-63.xml  inputBFAR5-59.xml  inputBFAR7-24.xml  inputBKBO1-84.xml  inputBKBO3-54.xml  inputBKBO4-35.xml  inputBKBO5-23.xml  inputBTREE1-124.xml  inputBTREE2-102.xml  inputBTREE3-61.xml
dataFAR/101tasks/: input1_far101.xml  (+2 more)
dataLB/: example2a_lb.xml  example4_amurrio_lb.xml  example5_2_lb.xml  example5_lb.xml  input1_far101_lb.xml  input1_far20_lb.xml  input1_kbo101_lb.xml  input1_kbo20_lb.xml  input1_tree100_lb.xml  input1_tree20_lb.xml  input2_far38_lb.xml  input2_kbo38_lb.xml  input2_tree39_lb.xml  input3_far56_lb.xml  input3_kbo56_lb.xml  input3_tree56_lb.xml
src/: classes.cpp  classes.h  dec_bcet.cpp  functions.cpp  functions.h  generator.cpp  generator_lb.cpp  main.cpp  tinyxml2.cpp  tinyxml2.h
(+117 files in other folders)
